--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="calculator"></div>
+    <div class="calculator">
+        <div class="expression-container">
+
+        </div>
+        <div class="buttons">
+            <div class="clear">
+                <div class="button">
+                    <p>C</p>
+                </div>
+            </div>
+            <div class="back">
+                <div class="button">
+                    <p><=</p>
+                </div>
+            </div>
+            <div class="rad-deg">
+                <div class="button">
+                    <p>deg-rad</p>
+                </div>
+            </div>
+            <div class="tan">
+                <div class="button">
+                    <p>tan</p>
+                </div>
+            </div>
+            <div class="cos">
+                <div class="button">
+                    <p>cos</p>
+                </div>
+            </div>
+            <div class="sin">
+                <div class="button">
+                    <p>sin</p>
+                </div>
+            </div>
+            <div class="pi">
+                <div class="button">
+                    <p>pi</p>
+                </div>
+            </div>
+            <div class="e-exponent">
+                <div class="button">
+                    <p>e<sup>x</sup>
+                    </p>
+                </div>
+            </div>
+            <div class="ln">
+                <div class="button">
+                    <p>ln</p>
+                </div>
+            </div>
+            <div class="log10">
+                <div class="button">
+                    <p>log</p>
+                </div>
+            </div>
+            <div class="exponent">
+                <div class="button">
+                    <p>^</p>
+                </div>
+            </div>
+            <div class="inverse">
+                <div class="inv button">
+                    <p>x<sup>-1</sup></p>
+                </div>
+            </div>
+            <div class="square">
+                <div class="button">
+                    <p>x<sup>2</sup></p>
+                </div>
+            </div>
+            <div class="parantheses">
+                <div class="button">
+                    <p>(...)</p>
+                </div>
+            </div>
+            <div class="seven">
+                <div class="number button">
+                    <p>7</p>
+                </div>
+            </div>
+            <div class="four">
+                <div class="number button">
+                    <p>4</p>
+                </div>
+            </div>
+            <div class="one">
+                <div class="number button">
+                    <p>1</p>
+                </div>
+            </div>
+            <div class="zero">
+                <div class="number button">
+                    <p>0</p>
+                </div>
+            </div>
+            <div class="eight">
+                <div class="number button">
+                    <p>8</p>
+                </div>
+            </div>
+            <div class="five">
+                <div class="number button">
+                    <p>5</p>
+                </div>
+            </div>
+            <div class="two">
+                <div class="number button">
+                    <p>2</p>
+                </div>
+            </div>
+            <div class="decimal">
+                <div class="number button">
+                    <p><strong>.</strong></p>
+                </div>
+            </div>
+            <div class="nine">
+                <div class="number button">
+                    <p>9</p>
+                </div>
+            </div>
+            <div class="six">
+                <div class="number button">
+                    <p>6</p>
+                </div>
+            </div>
+            <div class="three">
+                <div class="number button">
+                    <p>3</p>
+                </div>
+            </div>
+            <div class="ans">
+                <div class="button">
+                    <p>ans</p>
+                </div>
+            </div>
+            <div class="divide">
+                <div class="button">
+                    <p>/</p>
+                </div>
+            </div>
+            <div class="multiply">
+                <div class="button">
+                    <p>*</p>
+                </div>
+            </div>
+            <div class="minus">
+                <div class="button">
+                    <p>-</p>
+                </div>
+            </div>
+            <div class="plus">
+                <div class="button">
+                    <p>+</p>
+                </div>
+            </div>
+            <div class="equal">
+                <div class="button">
+                    <p>=</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="calc.js"></script>
 </body>
