--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,14 @@
 <body>
     <div class="calculator">
         <div class="expression-container">
-
+            <div class="expression">
+                <table class="wide">
+                    <tr>
+                        <td class="problem"><input id="exp-input" autofocus></input></td>
+                        <td class="solution">123</td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <div class="buttons">
             <div class="clear">
