--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
     <div class="calculator">
         <div class="expression-container" id="expression-container">
-            <table class="expressions">
+            <table class="expressions" id="expressions">
                 <tr class="expression">
                     <td class="problem" id="problem"><input id="exp-input" autofocus></input></td>
                     <td class="calculation" id="calculation"></td>
