--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     <div class="calculator">
         <div class="expression-container" id="expression-container">
             <table class="expressions" id="expressions">
-                <tr class="expression">
+                <tr class="expression" id="p0">
                     <td class="problem" id="problem"><input id="exp-input" autofocus></input></td>
                     <td class="calculation" id="calculation"></td>
                 </tr>
