--- a/popup.html
+++ b/popup.html
@@ -17,158 +17,163 @@
             </table>
         </div>
         <div class="buttons">
-            <div class="clear">
+            <div class="clear" id="clear">
                 <div class="button">
                     <p>C</p>
                 </div>
             </div>
-            <div class="back">
+            <div class="back" id="back">
                 <div class="button">
                     <p><=</p>
                 </div>
             </div>
-            <div class="rad-deg">
+            <div id="deg-rad">
                 <div class="button">
                     <p>deg-rad</p>
                 </div>
             </div>
-            <div class="tan">
+            <div id="tan">
                 <div class="button">
                     <p>tan</p>
                 </div>
             </div>
-            <div class="cos">
+            <div id="cos">
                 <div class="button">
                     <p>cos</p>
                 </div>
             </div>
-            <div class="sin">
+            <div id="sin">
                 <div class="button">
                     <p>sin</p>
                 </div>
             </div>
-            <div class="pi">
+            <div id="pi">
                 <div class="button">
                     <p>pi</p>
                 </div>
             </div>
-            <div class="e-exponent">
+            <div id="e-exponent">
                 <div class="button">
                     <p>e<sup>x</sup>
                     </p>
                 </div>
             </div>
-            <div class="ln">
+            <div id="ln">
                 <div class="button">
                     <p>ln</p>
                 </div>
             </div>
-            <div class="log10">
+            <div id="log10">
                 <div class="button">
                     <p>log</p>
                 </div>
             </div>
-            <div class="exponent">
+            <div id="parentheses-open">
+                <div class="button">
+                    <p>(</p>
+                </div>
+            </div>
+            <div id="exponent">
                 <div class="button">
                     <p>^</p>
                 </div>
             </div>
-            <div class="inverse">
+            <div id="inverse">
                 <div class="inv button">
                     <p>x<sup>-1</sup></p>
                 </div>
             </div>
-            <div class="square">
+            <div id="square">
                 <div class="button">
                     <p>x<sup>2</sup></p>
                 </div>
             </div>
-            <div class="parantheses">
+            <div id="parentheses-close">
                 <div class="button">
-                    <p>(...)</p>
+                    <p>)</p>
                 </div>
             </div>
-            <div class="seven">
+            <div id="seven">
                 <div class="number button">
                     <p>7</p>
                 </div>
             </div>
-            <div class="four">
+            <div id="four">
                 <div class="number button">
                     <p>4</p>
                 </div>
             </div>
-            <div class="one">
+            <div id="one">
                 <div class="number button">
                     <p>1</p>
                 </div>
             </div>
-            <div class="zero">
+            <div id="zero">
                 <div class="number button">
                     <p>0</p>
                 </div>
             </div>
-            <div class="eight">
+            <div id="eight">
                 <div class="number button">
                     <p>8</p>
                 </div>
             </div>
-            <div class="five">
+            <div id="five">
                 <div class="number button">
                     <p>5</p>
                 </div>
             </div>
-            <div class="two">
+            <div id="two">
                 <div class="number button">
                     <p>2</p>
                 </div>
             </div>
-            <div class="decimal">
+            <div id="decimal">
                 <div class="number button">
                     <p><strong>.</strong></p>
                 </div>
             </div>
-            <div class="nine">
+            <div id="nine">
                 <div class="number button">
                     <p>9</p>
                 </div>
             </div>
-            <div class="six">
+            <div id="six">
                 <div class="number button">
                     <p>6</p>
                 </div>
             </div>
-            <div class="three">
+            <div id="three">
                 <div class="number button">
                     <p>3</p>
                 </div>
             </div>
-            <div class="ans">
+            <div id="ans">
                 <div class="button">
                     <p>ans</p>
                 </div>
             </div>
-            <div class="divide">
+            <div id="divide">
                 <div class="button">
                     <p>/</p>
                 </div>
             </div>
-            <div class="multiply">
+            <div id="multiply">
                 <div class="button">
                     <p>*</p>
                 </div>
             </div>
-            <div class="minus">
+            <div id="minus">
                 <div class="button">
                     <p>-</p>
                 </div>
             </div>
-            <div class="plus">
+            <div id="plus">
                 <div class="button">
                     <p>+</p>
                 </div>
             </div>
-            <div class="equal">
+            <div class="equal" id="equal">
                 <div class="button">
                     <p>=</p>
                 </div>
