--- a/popup.html
+++ b/popup.html
@@ -10,19 +10,21 @@
     <div class="calculator">
         <div class="expression-container" id="expression-container">
             <table class="expressions" id="expressions">
-                <tr class="expression" id="p0">
-                    <td class="problem" id="problem"><input id="exp-input" autofocus></input></td>
-                    <td class="calculation" id="calculation"></td>
-                </tr>
+                <tbody></tbody>
             </table>
         </div>
         <div class="buttons">
-            <div class="clear" id="clear">
+            <div id="clear">
                 <div class="button">
                     <p>C</p>
                 </div>
             </div>
-            <div class="back" id="back">
+            <div id="up">
+                <div class="button">
+                    <p><=</p>
+                </div>
+            </div>
+            <div id="down">
                 <div class="button">
                     <p><=</p>
                 </div>
