--- a/popup.html
+++ b/popup.html
@@ -22,14 +22,14 @@
                     <p>C</p>
                 </div>
             </div>
-            <div id="up">
-                <div class="button">
-                    <p>↑</p>
+            <div id="up" class="up">
+                <div class="up button">
+                    <p class="up">↑</p>
                 </div>
             </div>
-            <div id="down">
-                <div class="button">
-                    <p>↓</p>
+            <div id="down" class="down">
+                <div class="down button">
+                    <p class="down">↓</p>
                 </div>
             </div>
             <div id="deg-rad">
