--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -15,6 +15,7 @@
         </div>
         <div class="deg-rad-indicator">
             <p class="indicator"><strong><span id="degrees">degrees</span> <span style="border: 0.15rem solid #D6EAF0" id="radians">radians</span></strong></p>
+            <div id="clear-all">CLEAR ALL</div>
         </div>
         <div class="buttons">
             <div id="clear">
