--- a/help.html
+++ b/help.html
@@ -94,7 +94,7 @@
             <tr>
                 <td>↓ (down-arrow)</td>
                 <td><span class=greyed-out>N/A</span></td>
-                <td>Same drill, but instead goes the the one below.</td>
+                <td>Same drill, but instead goes the one below.</td>
             </tr>
         </table>
 
