--- a/Extension/help.html
+++ b/Extension/help.html
@@ -94,15 +94,16 @@
             <tr>
                 <td>↓ (down-arrow)</td>
                 <td><span class=greyed-out>N/A</span></td>
-                <td>Same drill, but instead goes the the one below.</td>
+                <td>Same drill, but instead goes the one below.</td>
             </tr>
         </table>
 
         <h3>NOTES</h3>
         <ul>
-            <li>The "C" button allows you to clear all expressions from the calculator (you will be given a prompt to confirm).</li>
+            <li>The "C" button automatically clears the current expression from the calculator.</li>
+            <li>The "CLEAR ALL" button allows you to clear all expressions (you will be given a prompt to confirm).</li>
             <li>Negative numbers can be entered simply with the "-" button or key. Additionally, a "+" preceeding a number that is not indicative of addition automatically makes it a positive number.</li>
-            <li>Both negative and positive indicators are cumulative. Ex. entering "+--+-++-63" will output as 63.</li>
+            <li>Both negative and positive indicators are cumulative. Ex. entering "+--+-++-63" will output as 63. Adding a "-" anywhere before the number changes the output to -63.</li>
             <li>Trigonometric and logarithmic operatings <em>require</em> parentheses to be valid; Ex. "sin(π/3)" is valid, but "sinπ/3" is not.</li>
         </ul>
     </div>
