--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -188,7 +188,7 @@
         <div class="help">
             <button class="btn-bottom" id="help">Help!</button>
             <button class="btn-bottom" id="website">CP's Website</button>
-            <button class="btn-bottom" id="github">GitHub</button>
+            <button class="btn-bottom" id="code">Code</button>
         </div>
         <div id="clear-div" style="display: none;">
             <div id="clear-box">
